<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.enkhturbadamsaikhan.completesudoku.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo_small"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/iv_logo"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_username_register"
        android:text="@string/tv_username"
        android:layout_below="@+id/iv_logo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/tv_username_register"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/et_username_login"
        android:inputType="text"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_password_login"
        android:text="@string/tv_password"
        android:layout_below="@+id/et_username_login"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>


    <LinearLayout
        android:id="@+id/ll_linearLayout"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:layout_below="@+id/et_password_login"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <Button
            android:text="@string/b_register_login"
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            android:id="@+id/b_register_login"
            android:layout_alignParentLeft="true"
            />

        <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/b_login"
        android:text="@string/b_login"
        android:layout_marginLeft="10dp"
        android:layout_gravity="right"
        />

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/et_password_login"
        android:inputType="textPassword"
        android:layout_below="@+id/tv_password_login"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:text="@string/b_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b_facebook"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="31dp"/>

</RelativeLayout>
